--- a/lib/vuephxlive_web/templates/page/index.html.eex
+++ b/lib/vuephxlive_web/templates/page/index.html.eex
@@ -1,7 +1,6 @@
 <section class="phx-hero">
   <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
   <p>A productive web framework that<br/>does not compromise speed or maintainability.</p>
+  <%# <div id="hello"> %>
   <div id="hello">
-  <button-counter></button-counter>
-</div>
 </section>
